# slambooks14-exercise

./: .gitignore  CMakeLists.txt  README.md  ceresCurveFitting.cpp  disparity.cpp  draw_trajectory.cpp  gaussnewton.cpp  main.cpp  trajectoryError.cpp  undistort_image.cpp
E2Rt/: E2Rt.cpp  triangulation.cpp
GN-BA/: GN-BA.cpp  PNP_Err_test.cpp  pose_estimation_3d2d.cpp
ICP/: myICP.cpp  pose_estimation_3d3d.cpp
PNP_ICP_Practice/: icp_ceres.cpp  icp_g2o .cpp  icp_g2o_tmp.cpp  pnp_ceres.cpp  pnp_g2o.cpp  pnp_g2o_stone.cpp
orb_feature/: computeORB.cpp  sift_kaze_orb_detect.cpp
rgbd/: joinMap  joinMap.cpp
rgbd/depth/: joinMap
